Rename to CPN Price Engine Contract Review Report

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CPN Settlement Review Report</title>
+    <title>CPN Price Engine Contract Review Report</title>
     <style>
         /* --- Reset & Base --- */
         *, *::before, *::after {
@@ -347,7 +347,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <span class="brand">CPN Settlement Review Report</span>
+        <span class="brand">CPN Price Engine Contract Review Report</span>
         
         <a href="#synthesis" class="nav-link">Synthesis</a>
         <a href="#security-audit" class="nav-link">Security Audit</a>
